--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <!-- Research section -->
     <section id="research" class="research-section">
       <div class="section-header">
-        <h2 class="section-title">Research <br>Coming soon...</h2>
+        <h2 class="section-title">Research</h2>
         <div class="filter-toggle">
           <label class="switch">
             <input type="checkbox" id="filters-enabled">
