--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         
         <!-- Projects list -->
         <div class="projects" data-list="project" hidden>
-        <article class="paper research-entry" data-type="project" data-year="2025" data-tags="machine learning, bayesian information criteria, optimizational prediction">
+        <article class="paper research-entry" data-type="project" data-year="2025" data-tags="machine-learning, bayesian-information-criteria, optimizational-prediction">
           <div class="paper-thumb" aria-hidden="true">
             <div class="thumb-placeholder">No image</div>
           </div>
