--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     </div>
     <!-- Navigation links for different sections.  Feel free to jump to anchors. -->
     <div class="links">
-      <a id="link-scholar" href="#" style="color: rgb(255, 165, 0);">Scholar</a>
+      <a data-coming-soon href="#" style="color: rgb(255, 165, 0);">Scholar</a>
       <a href="#research" style="color: rgb(74, 74, 77);">Research</a>
-      <a id="link-github" href="#" style="color: rgb(74, 74, 77);">Github</a>
+      <a data-coming-soon href="#" style="color: rgb(74, 74, 77);">Github</a>
       <a href="https://x.com/fphillipsoff" style="color: rgb(0, 153, 220);">Twitter</a>
       <a href="#" style="color: rgb(0, 153, 220);">Bluesky</a>
       <a href="https://youtu.be/YQZEoZ4W0ac?si=Yt2K5QQlIYbt_nLi" style="color: rgb(0, 153, 220);">OnlyFans</a>
       <a href="mailto:Frank20040506@gapp.nthu.edu.tw" style="color: rgb(100, 205, 104);">Email</a>
-      <a id="link-cv" href="#"  style="color: rgb(255, 68, 107);">CV</a>
+      <a data-coming-soon href="#"  style="color: rgb(255, 68, 107);">CV</a>
     </div>
     <!-- Biography switcher.  Buttons allow the reader to toggle between short bio, detailed bio, projects and skills. -->
     <div class="bio-switcher">
@@ -230,7 +230,7 @@
       <div class="research-lists">
         <div class="papers" data-list="publication">
         <!-- Template entry. Duplicate and replace content as needed. -->
-        <article class="paper research-entry" data-type="publication" data-year="2025" data-tags="machine-learning,deep-learning">
+        <article class="paper research-entry" data-type="publication" data-year="" data-tags="">
           <div class="paper-thumb" aria-hidden="true">
             <div class="thumb-placeholder">No image</div>
           </div>
@@ -239,9 +239,9 @@
             <p class="paper-authors"><strong>Jian Zhai Zhang</strong>, Co‑authors</p>
             <p class="paper-venue"><em>Conference</em>, 2025</p>
             <p class="paper-links">
-              <a class="animated-link" href="#" target="_blank" rel="noopener">project page</a>
+              <a class="animated-link" href="#" target="_blank" rel="noopener">test</a>
               /
-              <a class="animated-link" href="#" target="_blank" rel="noopener">arXiv</a>
+              <a class="animated-link" href="#" target="_blank" rel="noopener">test</a>
             </p>
             <p class="paper-abstract">Short one‑line description goes here to summarize the contribution.</p>
           </div>
@@ -262,9 +262,9 @@
             <p class="paper-links">
               <a class="animated-link" href="#" target="_blank" rel="noopener">Web page</a>
               /
-              <a class="animated-link" href="#" target="_blank" rel="noopener">Report</a>
+              <a class="animated-link" data-coming-soon href="#" target="_blank" rel="noopener">Paper</a>
               /
-              <a class="animated-link" href="#" target="_blank" rel="noopener">Code</a>
+              <a class="animated-link" data-coming-soon href="#" target="_blank" rel="noopener">Code</a>
             </p>
             <p class="paper-abstract">A Bayesian machine learning
               model in this project to predict the relaxed energies of metal-oxide catalysts related to the reduction of carbon dioxide (CO₂RR)</p>
