--- a/project-co2rr.html
+++ b/project-co2rr.html
@@ -44,19 +44,19 @@
       </p>
       <div class="hero-affiliations"><sup>1</sup>National Tsing Hua University,<sup>*</sup>Data Analysis and Interpretation Laboratory</div>
       <div class="hero-actions" role="navigation" aria-label="Project quick links">
-        <a class="action is-purple" href="#" target="_blank" rel="noopener">
+        <a class="action is-purple" data-coming-soon href="#" target="_blank" rel="noopener">
           <img class="icon-img white" src="images/arxiv.svg" alt="arXiv" width="16" height="16" />
           arXiv
         </a>
-        <a class="action is-blue" href="#" target="_blank" rel="noopener">
+        <a class="action is-blue" data-coming-soon href="#" target="_blank" rel="noopener">
           <img class="icon-img white" src="images/github.png" alt="Code" width="16" height="16" />
           Code
         </a>
-        <a class="action is-orange" href="#" target="_blank" rel="noopener">
+        <a class="action is-orange" data-coming-soon href="#" target="_blank" rel="noopener">
           <img class="icon-img" src="images/huggingface.png" alt="Hugging Face" width="16" height="16" />
           Data (HF)
         </a>
-        <a class="action is-green" href="#" target="_blank" rel="noopener">
+        <a class="action is-green" data-coming-soon href="#" target="_blank" rel="noopener">
           <svg class="icon" viewBox="0 0 24 24" aria-hidden="true"><path d="M21 3H3v18h18V3Zm-2 2v10l-3-3-4 4-3-3-4 4V5h14Z"/></svg>
           Slides
         </a>
@@ -102,14 +102,8 @@
 
     <div class="project-section">
       <h3>BibTeX</h3>
-      <div class="bibtex">@misc{zhang2025co2rr,
-  title={A Bayesian Machine for Relaxed Energy Prediction on Metal-Oxide Catalysts for CO2 Reduction},
-  author={Zhang, Jian Zhai and Yan, Ying Hui},
-  year={2025},
-  eprint={pending},
-  archivePrefix={arXiv},
-  primaryClass={cs.LG}
-}
+      <div class="bibtex">
+        
       </div>
     </div>
 
