--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <p class="paper-authors"><strong>Jian Zhai Zhang</strong> & Ying Hui Yan</p>
             <p class="paper-venue"><em>arXiv</em>, 2025</p>
             <p class="paper-links">
-              <a class="animated-link" href="#" target="_blank" rel="noopener">Web page</a>
+              <a class="animated-link" href="project-co2rr.html" target="_blank" rel="noopener">Web page</a>
               /
               <a class="animated-link" data-coming-soon href="#" target="_blank" rel="noopener">Paper</a>
               /
