--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
             <p class="paper-authors"><strong>Jian Zhai Zhang</strong>, Co‑authors</p>
             <p class="paper-venue"><em>Conference</em>, 2025</p>
             <p class="paper-links">
-              <a class="animated-link" href="#" target="_blank" rel="noopener">test</a>
+              <a class="animated-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener">test</a>
               /
-              <a class="animated-link" href="#" target="_blank" rel="noopener">test</a>
+              <a class="animated-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener">test</a>
             </p>
             <p class="paper-abstract">Short one‑line description goes here to summarize the contribution.</p>
           </div>
