--- a/index.html
+++ b/index.html
@@ -199,6 +199,41 @@
       <label for="toggler" aria-label="Toggler for Dark Mode"></label>
     </div>
     
+    <!-- News section -->
+    <section class="news-section" id="news">
+      <div class="news-header">
+        <h2 class="section-title">News</h2>
+        <button id="news-toggle" class="news-toggle" type="button" aria-expanded="false">Show more</button>
+      </div>
+      <div class="news-card collapsed" id="news-card">
+        <ul class="news-list">
+          <li class="news-item">
+            <div class="news-date">Apr, 2025</div>
+            <div class="news-text">
+              Assisted the Electrochemistry and Microscopy Laboratory (Principal Investigator: Peng-Wei Chu) and the National Science and Technology Council (Taiwan) with ATP and TEM data analysis, where I was responsible for developing algorithms for 3D reconstruction in ATP. 🤝</div>
+          </li>
+          <li class="news-item">
+            <div class="news-date">Jul, 2025</div>
+            <div class="news-text">
+              Using the atomic motion trajectory tracker I designed, I collaborated again with the Atomic Analysis and Dynamics Lab (Principal Investigator: Ming-Yen Lu) to support their research on atomic motion and its trends on binary alloy surfaces.🤝</div>
+          </li>
+          <li class="news-item">
+            <div class="news-date">Jun, 2024</div>
+            <div class="news-text">
+              Collaborated with the Atomic Analysis and Dynamics Lab (Principal Investigator: Ming-Yen Lu) on studying heavy atom motion on high-entropy alloy surfaces, where I was responsible for designing and developing an end-to-end atomic motion trajectory tracker. 🤝</div>
+          </li>
+          <li class="news-item">
+            <div class="news-date">Jan, 2025</div>
+            <div class="news-text">Started conducting research on deep learning-based prediction of electrocatalyst properties in collaboration with PrimatQ Lab (Principal Investigator: Jyh-Pin Chou). 🤝</div>
+          </li>
+          <li class="news-item">
+            <div class="news-date">Dec, 2024</div>
+            <div class="news-text">I joined Data Analysis and Interpretation Laboratory as an undergraduate research intern. 🥳</div>
+          </li>
+        </ul>
+      </div>
+    </section>
+
     <!-- Research section -->
     <section id="research" class="research-section">
       <div class="section-header">
@@ -235,9 +270,9 @@
             <div class="thumb-placeholder">No image</div>
           </div>
           <div class="paper-content">
-            <h3 class="paper-title">Example Paper Title</h3>
+            <h3 class="paper-title">Automated Recognition of Atomic-Scale Tracking via A Kalman Based Network and Hungarian Algorithm.</h3>
             <p class="paper-authors"><strong>Jian Zhai Zhang</strong>, Co‑authors</p>
-            <p class="paper-venue"><em>Conference</em>, 2025</p>
+            <p class="paper-venue"><em>To be determined</em>, 2025</p>
             <p class="paper-links">
               <a class="animated-link" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener">test</a>
               /
