--- a/index.html
+++ b/index.html
@@ -210,25 +210,47 @@
           <li class="news-item">
             <div class="news-date">Apr, 2025</div>
             <div class="news-text">
-              Assisted the Electrochemistry and Microscopy Laboratory (Principal Investigator: Peng-Wei Chu) and the National Science and Technology Council (Taiwan) with ATP and TEM data analysis, where I was responsible for developing algorithms for 3D reconstruction in ATP. 🤝</div>
+              Assisted 
+              <a class="animated-link" href="https://pwchu.weebly.com/" style="color: rgb(255, 68, 107);"></a>Electrochemistry and Microscopy Laboratory</a> 
+              (Principal Investigator: 
+              <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=a6807f97-5af9-45da-9b4f-c2b3e5663ce6" style="color: rgb(0, 153, 220);">Peng-Wei Chu</a>
+              ) and 
+              <a class="animated-link" href="https://www.nstc.gov.tw/en/home" style="color: rgb(255, 165, 0);">National Science and Technology Council (Taiwan)</a> 
+              with ATP and TEM data analysis, where I was responsible for developing algorithms for 3D reconstruction in ATP. 🤝</div>
           </li>
           <li class="news-item">
             <div class="news-date">Jul, 2025</div>
             <div class="news-text">
-              Using the atomic motion trajectory tracker I designed, I collaborated again with the Atomic Analysis and Dynamics Lab (Principal Investigator: Ming-Yen Lu) to support their research on atomic motion and its trends on binary alloy surfaces.🤝</div>
+              Using the atomic motion trajectory tracker I designed, I collaborated again with 
+              <a class="animated-link" href="https://sites.google.com/site/nofmlab/home?authuser=0" style="color: rgb(255, 68, 107);"></a>Atomic Analysis and Dynamics Lab</a> 
+              (Principal Investigator: 
+              <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=331A7627-3CD0-4FD0-8AA3-393855652DB8" style="color: rgb(0, 153, 220);">Ming-Yen Lu</a>
+              ) to support their research on atomic motion and its trends on binary alloy surfaces.🤝</div>
           </li>
           <li class="news-item">
             <div class="news-date">Jun, 2024</div>
             <div class="news-text">
-              Collaborated with the Atomic Analysis and Dynamics Lab (Principal Investigator: Ming-Yen Lu) on studying heavy atom motion on high-entropy alloy surfaces, where I was responsible for designing and developing an end-to-end atomic motion trajectory tracker. 🤝</div>
+              Collaborated with 
+              <a class="animated-link" href="https://sites.google.com/site/nofmlab/home?authuser=0" style="color: rgb(255, 68, 107);"></a>Atomic Analysis and Dynamics Lab</a> 
+              (Principal Investigator: 
+              <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=331A7627-3CD0-4FD0-8AA3-393855652DB8" style="color: rgb(0, 153, 220);">Ming-Yen Lu</a>
+              ) on studying heavy atom motion on high-entropy alloy surfaces, where I was responsible for designing and developing an end-to-end atomic motion trajectory tracker. 🤝</div>
           </li>
           <li class="news-item">
             <div class="news-date">Jan, 2025</div>
-            <div class="news-text">Started conducting research on deep learning-based prediction of electrocatalyst properties in collaboration with PrimatQ Lab (Principal Investigator: Jyh-Pin Chou). 🤝</div>
+            <div class="news-text">Started conducting research on deep learning-based prediction of electrocatalyst properties in collaboration with 
+              <a class="animated-link" href="https://nthuesssail.weebly.com/" style="color: rgb(255, 68, 107);">PrimatQ Laboratory</a> 
+              (Principal Investigator: 
+              <a class="animated-link" href="https://sites.google.com/view/jyh-pin-chou/people?authuser=0" style="color: rgb(0, 153, 220);"></a>Jyh-Pin Chou</a>
+              ). 🤝</div>
           </li>
           <li class="news-item">
             <div class="news-date">Dec, 2024</div>
-            <div class="news-text">I joined Data Analysis and Interpretation Laboratory as an undergraduate research intern. 🥳</div>
+            <div class="news-text">I joined 
+              <a class="animated-link" href="https://nthuesssail.weebly.com/" style="color: rgb(255, 68, 107);">Data Analysis and Interpretation Laboratory</a> 
+              (Principal Investigator: 
+              <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=FABF5FA2-3A74-4F01-A385-F9B5FE1347A7" style="color: rgb(0, 153, 220);">Shun-Chi Wu</a>
+              ) as an undergraduate research intern. 🥳</div>
           </li>
         </ul>
       </div>
