--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <div class="news-date">Apr, 2025</div>
             <div class="news-text">
               Assisted 
-              <a class="animated-link" href="https://pwchu.weebly.com/" style="color: rgb(255, 68, 107);"></a>Electrochemistry and Microscopy Laboratory</a> 
+              <a class="animated-link" href="https://pwchu.weebly.com/" style="color: rgb(255, 68, 107);">Electrochemistry and Microscopy Laboratory</a> 
               (Principal Investigator: 
               <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=a6807f97-5af9-45da-9b4f-c2b3e5663ce6" style="color: rgb(0, 153, 220);">Peng-Wei Chu</a>
               ) and 
@@ -222,7 +222,7 @@
             <div class="news-date">Jul, 2025</div>
             <div class="news-text">
               Using the atomic motion trajectory tracker I designed, I collaborated again with 
-              <a class="animated-link" href="https://sites.google.com/site/nofmlab/home?authuser=0" style="color: rgb(255, 68, 107);"></a>Atomic Analysis and Dynamics Lab</a> 
+              <a class="animated-link" href="https://sites.google.com/site/nofmlab/home?authuser=0" style="color: rgb(255, 68, 107);">Atomic Analysis and Dynamics Lab</a> 
               (Principal Investigator: 
               <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=331A7627-3CD0-4FD0-8AA3-393855652DB8" style="color: rgb(0, 153, 220);">Ming-Yen Lu</a>
               ) to support their research on atomic motion and its trends on binary alloy surfaces.🤝</div>
@@ -231,7 +231,7 @@
             <div class="news-date">Jun, 2024</div>
             <div class="news-text">
               Collaborated with 
-              <a class="animated-link" href="https://sites.google.com/site/nofmlab/home?authuser=0" style="color: rgb(255, 68, 107);"></a>Atomic Analysis and Dynamics Lab</a> 
+              <a class="animated-link" href="https://sites.google.com/site/nofmlab/home?authuser=0" style="color: rgb(255, 68, 107);">Atomic Analysis and Dynamics Lab</a> 
               (Principal Investigator: 
               <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=331A7627-3CD0-4FD0-8AA3-393855652DB8" style="color: rgb(0, 153, 220);">Ming-Yen Lu</a>
               ) on studying heavy atom motion on high-entropy alloy surfaces, where I was responsible for designing and developing an end-to-end atomic motion trajectory tracker. 🤝</div>
@@ -241,7 +241,7 @@
             <div class="news-text">Started conducting research on deep learning-based prediction of electrocatalyst properties in collaboration with 
               <a class="animated-link" href="https://nthuesssail.weebly.com/" style="color: rgb(255, 68, 107);">PrimatQ Laboratory</a> 
               (Principal Investigator: 
-              <a class="animated-link" href="https://sites.google.com/view/jyh-pin-chou/people?authuser=0" style="color: rgb(0, 153, 220);"></a>Jyh-Pin Chou</a>
+              <a class="animated-link" href="https://sites.google.com/view/jyh-pin-chou/people?authuser=0" style="color: rgb(0, 153, 220);">Jyh-Pin Chou</a>
               ). 🤝</div>
           </li>
           <li class="news-item">
