--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           He undertook an undergraduate research internship at 
           <a class="animated-link" href="https://nthuesssail.weebly.com/" style="color: rgb(255, 68, 107);">Data Analysis and Interpretation Laboratory</a> 
           under the supervision and advise of 
-          <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=FABF5FA2-3A74-4F01-A385-F9B5FE1347A7" style="color: rgb(0, 153, 220);">Professor Shun-Chi Wu</a>. 
+          <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=FABF5FA2-3A74-4F01-A385-F9B5FE1347A7" style="color: rgb(0, 153, 220);">Professor Shun Chi Wu</a>. 
           He founded an independent co-research group related to AI with his peers, dedicated to exploring neural operators as well as deep learning and their applications.
         </p>
 
@@ -78,7 +78,7 @@
           From December 2024, he undertook an undergraduate research internship at 
           <a class="animated-link" href="https://nthuesssail.weebly.com/" style="color: rgb(255, 68, 107);">Data Analysis and Interpretation Laboratory</a> 
           under the supervision and advise of 
-          <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=FABF5FA2-3A74-4F01-A385-F9B5FE1347A7" style="color: rgb(0, 153, 220);">Professor Shun-Chi Wu</a>. 
+          <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=FABF5FA2-3A74-4F01-A385-F9B5FE1347A7" style="color: rgb(0, 153, 220);">Professor Shun Chi Wu</a>. 
         </p>
         <p style="line-height: 2;">
           His research focused on signal processing / image processing / deep learning as well as the development of AI-assisted tools for 
@@ -213,7 +213,7 @@
               Assisted 
               <a class="animated-link" href="https://pwchu.weebly.com/" style="color: rgb(255, 68, 107);">Electrochemistry and Microscopy Laboratory</a> 
               (Principal Investigator: 
-              <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=a6807f97-5af9-45da-9b4f-c2b3e5663ce6" style="color: rgb(0, 153, 220);">Peng-Wei Chu</a>
+              <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=a6807f97-5af9-45da-9b4f-c2b3e5663ce6" style="color: rgb(0, 153, 220);">Peng Wei Chu</a>
               ) and 
               <a class="animated-link" href="https://www.nstc.gov.tw/en/home" style="color: rgb(255, 165, 0);">National Science and Technology Council (Taiwan)</a> 
               with ATP and TEM data analysis, where I was responsible for developing algorithms for 3D reconstruction in ATP. 🤝</div>
@@ -224,7 +224,7 @@
               Using the atomic motion trajectory tracker I designed, I collaborated again with 
               <a class="animated-link" href="https://sites.google.com/site/nofmlab/home?authuser=0" style="color: rgb(255, 68, 107);">Atomic Analysis and Dynamics Lab</a> 
               (Principal Investigator: 
-              <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=331A7627-3CD0-4FD0-8AA3-393855652DB8" style="color: rgb(0, 153, 220);">Ming-Yen Lu</a>
+              <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=331A7627-3CD0-4FD0-8AA3-393855652DB8" style="color: rgb(0, 153, 220);">Ming Yen Lu</a>
               ) to support their research on atomic motion and its trends on binary alloy surfaces.🤝</div>
           </li>
           <li class="news-item">
@@ -233,7 +233,7 @@
               Collaborated with 
               <a class="animated-link" href="https://sites.google.com/site/nofmlab/home?authuser=0" style="color: rgb(255, 68, 107);">Atomic Analysis and Dynamics Lab</a> 
               (Principal Investigator: 
-              <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=331A7627-3CD0-4FD0-8AA3-393855652DB8" style="color: rgb(0, 153, 220);">Ming-Yen Lu</a>
+              <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=331A7627-3CD0-4FD0-8AA3-393855652DB8" style="color: rgb(0, 153, 220);">Ming Yen Lu</a>
               ) on studying heavy atom motion on high-entropy alloy surfaces, where I was responsible for designing and developing an end-to-end atomic motion trajectory tracker. 🤝</div>
           </li>
           <li class="news-item">
@@ -241,7 +241,7 @@
             <div class="news-text">Started conducting research on deep learning-based prediction of electrocatalyst properties in collaboration with 
               <a class="animated-link" href="https://nthuesssail.weebly.com/" style="color: rgb(255, 68, 107);">PrimatQ Laboratory</a> 
               (Principal Investigator: 
-              <a class="animated-link" href="https://sites.google.com/view/jyh-pin-chou/people?authuser=0" style="color: rgb(0, 153, 220);">Jyh-Pin Chou</a>
+              <a class="animated-link" href="https://sites.google.com/view/jyh-pin-chou/people?authuser=0" style="color: rgb(0, 153, 220);">Jyh Pin Chou</a>
               ). 🤝</div>
           </li>
           <li class="news-item">
@@ -249,7 +249,7 @@
             <div class="news-text">I joined 
               <a class="animated-link" href="https://nthuesssail.weebly.com/" style="color: rgb(255, 68, 107);">Data Analysis and Interpretation Laboratory</a> 
               (Principal Investigator: 
-              <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=FABF5FA2-3A74-4F01-A385-F9B5FE1347A7" style="color: rgb(0, 153, 220);">Shun-Chi Wu</a>
+              <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=FABF5FA2-3A74-4F01-A385-F9B5FE1347A7" style="color: rgb(0, 153, 220);">Shun Chi Wu</a>
               ) as an undergraduate research intern. 🥳</div>
           </li>
         </ul>
