--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             <div class="thumb-placeholder">No image</div>
           </div>
           <div class="paper-content">
-            <h3 class="paper-title">Automated Recognition of Atomic-Scale Tracking via A Kalman Based Network and Hungarian Algorithm.</h3>
+            <h3 class="paper-title">Automated Recognition of Atomic-Scale Tracking via xxxxxx and xxxxxx.</h3>
             <p class="paper-authors"><strong>Jian Zhai Zhang</strong>, Co‑authors</p>
             <p class="paper-venue"><em>To be determined</em>, 2025</p>
             <p class="paper-links">
