--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <li class="news-item">
             <div class="news-date">Jul, 2025</div>
             <div class="news-text">
-              Using the atomic motion trajectory tracker I designed, I collaborated again with 
+              Using the atomic motion trajectory tracker I designed, we collaborated again with 
               <a class="animated-link" href="https://sites.google.com/site/nofmlab/home?authuser=0" style="color: rgb(255, 68, 107);">Atomic Analysis and Dynamics Lab</a> 
               (Principal Investigator: 
               <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=331A7627-3CD0-4FD0-8AA3-393855652DB8" style="color: rgb(0, 153, 220);">Ming Yen Lu</a>
