--- a/index.html
+++ b/index.html
@@ -216,12 +216,15 @@
               <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=a6807f97-5af9-45da-9b4f-c2b3e5663ce6" style="color: rgb(0, 153, 220);">Peng Wei Chu</a>
               ) and 
               <a class="animated-link" href="https://www.nstc.gov.tw/?l=en" style="color: rgb(255, 165, 0);">National Science and Technology Council (Taiwan)</a> 
-              with ATP and TEM data analysis, where I was responsible for developing algorithms for 3D reconstruction in ATP. 🤝</div>
+              with ATP and TEM data analysis, where I was responsible for developing 
+              <span style="display: inline; background: rgba(255, 165, 0, 0.7); padding: 2px 4px; border-radius: 2.5px;"> algorithms for 3D reconstruction in ATP</span>. 🤝</div>
           </li>
           <li class="news-item">
             <div class="news-date">Jul, 2025</div>
             <div class="news-text">
-              Using the atomic motion trajectory tracker I designed, we collaborated again with 
+              Using 
+              <span style="display: inline; background: rgba(255, 165, 0, 0.7); padding: 2px 4px; border-radius: 2.5px;">the atomic motion trajectory tracker</span> 
+              I designed, we collaborated again with 
               <a class="animated-link" href="https://sites.google.com/site/nofmlab/home?authuser=0" style="color: rgb(255, 68, 107);">Atomic Analysis and Dynamics Lab</a> 
               (Principal Investigator: 
               <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=331A7627-3CD0-4FD0-8AA3-393855652DB8" style="color: rgb(0, 153, 220);">Ming Yen Lu</a>
@@ -234,11 +237,14 @@
               <a class="animated-link" href="https://sites.google.com/site/nofmlab/home?authuser=0" style="color: rgb(255, 68, 107);">Atomic Analysis and Dynamics Lab</a> 
               (Principal Investigator: 
               <a class="animated-link" href="https://khub.nthu.edu.tw/researcherProfile?uuid=331A7627-3CD0-4FD0-8AA3-393855652DB8" style="color: rgb(0, 153, 220);">Ming Yen Lu</a>
-              ) on studying heavy atom motion on high-entropy alloy surfaces, where I was responsible for designing and developing an end-to-end atomic motion trajectory tracker. 🤝</div>
+              ) on studying heavy atom motion on high-entropy alloy surfaces, where I was responsible for designing and developing 
+              <span style="display: inline; background: rgba(255, 165, 0, 0.7); padding: 2px 4px; border-radius: 2.5px;">an end-to-end atomic motion trajectory tracker</span>. 🤝</div>
           </li>
           <li class="news-item">
             <div class="news-date">Jan, 2025</div>
-            <div class="news-text">Started conducting research on deep learning-based prediction of electrocatalyst properties in collaboration with 
+            <div class="news-text">Started conducting research on 
+              <span style="display: inline; background: rgba(255, 165, 0, 0.7); padding: 2px 4px; border-radius: 2.5px;">deep learning-based prediction of electrocatalyst properties</span> 
+              in collaboration with 
               <a class="animated-link" href="https://nthuesssail.weebly.com/" style="color: rgb(255, 68, 107);">PrimatQ Laboratory</a> 
               (Principal Investigator: 
               <a class="animated-link" href="https://sites.google.com/view/jyh-pin-chou/people?authuser=0" style="color: rgb(0, 153, 220);">Jyh Pin Chou</a>
@@ -309,9 +315,9 @@
         <!-- Projects list -->
         <div class="projects" data-list="project" hidden>
         <article class="paper research-entry" data-type="project" data-year="2025" data-tags="machine-learning, bayesian-information-criteria, optimizational-prediction">
-          <div class="paper-thumb" aria-hidden="true">
-            <div class="thumb-placeholder">No image</div>
-          </div>
+            <div class="paper-thumb" aria-hidden="true">
+              <img src="doc/projecr-co2rr/Baysian.svg" alt="Paper thumbnail">
+            </div>
           <div class="paper-content">
             <h3 class="paper-title">A Bayesian Machine for Relaxed Energy Prediction on Metal-Oxide Catalysts for CO2 Reduction</h3>
             <p class="paper-authors"><strong>Jian Zhai Zhang</strong> & Ying Hui Yan</p>
