--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <!-- Navigation links for different sections.  Feel free to jump to anchors. -->
     <div class="links">
       <a data-coming-soon href="#" style="color: rgb(255, 165, 0);">Scholar</a>
+      <a data-coming-soon href="#" style="color: rgb(255, 165, 0);">ORCiD</a>
       <a href="#research" style="color: rgb(74, 74, 77);">Research</a>
       <a data-coming-soon href="#" style="color: rgb(74, 74, 77);">Github</a>
       <a href="https://x.com/fphillipsoff" style="color: rgb(0, 153, 220);">Twitter</a>
