--- a/project-co2rr.html
+++ b/project-co2rr.html
@@ -8,14 +8,17 @@
   <link rel="stylesheet" href="style.css">
   <style>
     .project-hero { margin: 28px 0 10px; }
-    .project-title { margin: 0; font-size: clamp(1.6rem, 1.2rem + 1.2vw, 2.2rem); line-height: 1.3; }
-    .project-subtitle { color: #96979c; margin: 6px 0 14px; font-size: 0.95rem; }
+    .project-title { margin: 0; font-size: clamp(1.45rem, 1.1rem + 1.1vw, 2.0rem); line-height: 1.3; }
+    .project-subtitle { color: #96979c; margin: 6px 0 14px; font-size: 0.9rem; }
     .project-authors { margin: 8px 0 0; }
     .project-links { margin: 10px 0 22px; display: flex; gap: 12px; flex-wrap: wrap; }
     .project-links a { color: #0099dc; text-decoration: none; }
     .project-links a:hover { text-decoration: underline; }
     .project-section { margin: 26px 0; }
     .project-section h3 { margin: 0 0 10px; font-size: 1.2rem; }
+    /* Slightly reduce body text size for this project page */
+    .project-section p { font-size: 0.88rem; }
+    .hero-authors { font-size: 0.98rem; }
     .hero-thumb { width: 100%; aspect-ratio: 16/9; border-radius: 12px; background: transparent; display: grid; place-items: center; color: #999; border: none; }
     .pill { display: inline-block; padding: 2px 10px; border: 1px solid #eee; border-radius: 999px; font-size: 0.8rem; color: #666; }
     .bibtex { white-space: pre; font-size: 0.8rem; background: #f6f6f6; border: 1px solid #eee; padding: 12px; border-radius: 10px; overflow: auto; }
